# NewTravel

./: .clang-format  .gitignore  CMakeLists.txt
Basis/: CMakeLists.txt
Basis/Configure/: CMakeLists.txt
Basis/Configure/Test/include/: ut_confugure.h
Basis/Configure/src/: configure_base.cpp
Basis/Include/Kinematics/: modern_robotics.h
Basis/Include/Log/: log.h
Basis/Include/Math/: math_vector3d.h
Basis/Include/Model/: model_data.h
Basis/Include/PQP/: MatVec.h  OBB_Disjoint.h  PQP_Internal.h  Tri.h  TriDist.h
Basis/Kinematics/: CMakeLists.txt
Basis/Kinematics/src/: modern_robotics.cpp
Basis/Log/: CMakeLists.txt
Basis/Log/src/: log_record.cpp
Basis/Math/: CMakeLists.txt
Basis/Math/src/: math_matrix4.cpp  math_rotation.cpp  math_vector3d.cpp
Basis/Model/: CMakeLists.txt
Basis/Model/src/: model_data.cpp
Basis/PQP/: CMakeLists.txt
Basis/PQP/src/: BV.cpp  Build.cpp  TriDist.cpp
Basis/include/Math/: math_matrix4.h  math_rotation.h
Basis/include/Model/: model_data.h
Basis/include/PQP/: BV.h  Build.h
Cmake/: ExecuteTarget.cmake  ExternalLibrary.cmake  LibraryTarget.cmake  Qt_Execute.cmake  UtExecuteTarget.cmake
CollisionDetection/include/: BV.h  GetTime.h  MatVec.h  PQP.h  PQP_Compile.h  RectDist.h  model_cillision_detection.h
CollisionDetection/src/: BV.cpp  Build.cpp  PQP.cpp  TriDist.cpp  model_collision_detection.cpp
Configure/src/: configure_base.cpp
Data/RobotModel/: ModelPath.xml  SquareGrid.STL  TX2-60L HORIZONTAL BASE.STL  TX2-60L HORIZONTAL BASESTL  TX2-60L TOOL FLANGE.STL  TX2-60L WRIST.STL  TX2-60L_Joint_0.STL  TX2-60L_Joint_5.STL  TestFile.xml  球R100mm.STL
Doc/doc/: OBB碰撞检测.md  STL文件的格式.md  机器人学笔记.md  运动旋量.md
Doc/doc/Robot/: 机器人学笔记.md
Ext/TinyXml2/: CMakeLists.txt
Ext/googletest/cmake/: internal_utils.cmake
ExternalSource/googletest/: CMakeLists.txt
ExternalSource/googletest/cmake/: internal_utils.cmake
GLTest/include/: load_robot.h
GLTest/src/: GLMainWidget.cpp  GLMainWidget.h  RoamingScenceManager.cpp  RoamingScenceManager.h  load_robot.cpp  main.cpp  widget.cpp  widget.h
Kinematics/source/: modern_robotics.cpp
Log/: log_record.cpp
Math/Source/: math_matrix.cpp  math_matrix4.cpp  math_matrix4_eigen.cpp  math_matrix4d.cpp  math_matrix_rotate.cpp  math_rotation.cpp  math_rotation_eigen.cpp  math_se3mat.cpp  math_six_axis.cpp  math_six_axis_screw_array.cpp  math_six_axis_vec6d.cpp  math_transfromation_matrix.cpp  math_vector3d.cpp  math_vector3d_eigen.cpp  math_vector6d.cpp  math_vector_d3.cpp
Model/Source/: model_data.cpp  model_data_eigen.cpp
Mutex/source/: base_mutex.cpp
PQP/Source/: BV.cpp  Build.cpp  PQP.cpp
Robot/src/: robot_six_axis.cpp  robot_six_axis_screw_array.cpp
RobotModel/source/: modern_robotics.cpp
RobotSimulationPlatform/: my_robot.cpp  my_robot.ui  my_slider.h  myopenglwiegt.h  robot_body_load.cpp  robot_body_load.h  robot_camera.h  robot_joint_degree_constrol_slider.cpp  robot_joint_degree_constrol_slider.h  robot_joint_degree_control_slider.cpp  robot_joint_degree_control_slider.h  robot_joint_degree_spinbox.cpp  robot_joint_degree_spinbox.h  robot_joint_label.cpp  robot_joint_label.h  robot_main.cpp  robot_other_model_transform.cpp  robot_other_model_transform.h  robot_pushbutton_openfile.cpp  robot_pushbutton_openfile.h  robot_pushbutton_send_message.cpp  robot_pushbutton_send_message.h  robot_qfile_dialog.cpp  robot_qfile_dialog.h  robot_qtext.cpp  robot_qtext.h  robot_simulation.cpp  robot_simulation.h  robot_simulation_main_platform.h  robot_simulation_platform.ui  robot_target_joint.cpp  robot_target_joint.h  simulation.h  stl.frag  stl.vert  ui_robot_simulation_platform.h
StaubliRobot/: CMakeLists.txt
StaubliRobot/CollisionDetection/: CMakeLists.txt
StaubliRobot/CollisionDetection/src/: model_collision_detection.cpp
StaubliRobot/Data/RobotModel/: 1.STL  7.STL  BallR100mm.STL
StaubliRobot/StaubliKinematics/: CMakeLists.txt
StaubliRobot/StaubliKinematics/src/: robot_stuabil_kinematics.cpp
StaubliRobot/TrajectoryGeneration/: CMakeLists.txt
StaubliRobot/TrajectoryGeneration/src/: trajectory_generation_rrt.cpp
StaubliRobot/include/CollisionDetection/: model_cillision_detection.h
StaubliRobot/include/StuabilKinematics/: robot_stuabil_kinematics.h
Test/: math_add.h
Test/CollisionDetection/: ut_collision_detection.cpp  ut_collision_detection.h  ut_collision_detection_main.cpp
Test/Configure/: ut_confugure.cpp  ut_confugure.h
Test/Kinematics/: ut_robot_model.cpp
Test/Log/: test_log.cpp  test_log.h
Test/Math/: ut_math.cpp  ut_math.h
Test/Model/: 1.STL  ut_model.cpp  ut_model.h  ut_model_main.cpp
Test/Mutex/: test_mutex.cpp  test_mutex.h  ut_mutex.cpp  ut_mutex.h
Test/PQP/: test_pqp.cpp  ut_pqp.cpp  ut_pqp.h  ut_pqp_main.cpp
Test/Qt/: my_SpinBox.cpp  my_SpinBox.h  my_robot.h  my_slider.cpp  myopenglwiegt.cpp  myopenglwiegt.h  stl.vert  test_qt.cpp  triangle.frag  triangle.vert  ui_my_robot.h
Test/Robot/: ut_robot.cpp  ut_robot.h
Test/RobotModel/: ut_robot_model.cpp  ut_robot_model.h
Test/TrajectoryGeneration/: ut_trajectory_generation.cpp  ut_trajectory_generation.h  ut_trajectory_generation_main.cpp
Test/Webots/: main.cpp
TrajectoryGeneration/src/: trajectory_generation_rrt.cpp
include/: protocol.h
include/CollisionDetection/: model_cillision_detection.h
include/Configure/: configure_base.h
include/Kinematics/: modern_robotics.h
include/Log/: log.h  log_record.h
include/Math/: math_linear_algebra.h  math_matrix.h  math_matrix4.h  math_matrix4_eigen.h  math_matrix4d.h  math_matrix_rotate.h  math_rotation.h  math_rotation_eigen.h  math_se3mat.h  math_six_axis.h  math_six_axis_screw_array.h  math_six_axis_vec6d.h  math_transfromation_matrix.h  math_vector3d.h  math_vector3d_eigen.h  math_vector6d.h
include/Model/: model_data.h  model_data_eigen.h
include/Mutex/: base_mutex.h
include/PQP/: BV.h  BVTQ.h  MatVec.h  PQP_Compile.h  PQP_Internal.h
include/Robot/: robot_six_axis.h  robot_six_axis_screw_array.h
include/RobotModel/: modern_robotics.h
include/TrajectoryGeneration/: trajectory_generation_rrt.h
(+103 files in other folders)
